--- a/estilos.css
+++ b/estilos.css
@@ -59,6 +59,7 @@ main {
   max-width: 100%;
   box-sizing: border-box;
   background-color: #1e1e1e;
+  margin-top: 45px;
 }
 
 h1 {
@@ -169,6 +170,17 @@ a {
     cursor: pointer;
     text-decoration: none;
     transition: background-color 0.3s ease;
+}
+
+blockquote{
+    font-size: 20px;
+    width: 100vw;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    text-shadow: 0px 10px 10px rgb(0, 0, 0);
+    margin: 0;
 }
 
 /*Esto es para el celular, esta raro jaja*/
